--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ footer { text-align: center; padding: 30px 20px; margin-top: 20px; background: r
 
 <script>
 function chamarZap() {
-  window.open("https://wa.me/5511979957192?text=Preciso%20de%20guincho%20urgente", "_blank", "noopener,noreferrer");
+  window.location.href = "tel:+5511979957192";
 }
 
 /* LÓGICA DO CARROSSEL */
