--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 		<p>Chegamos rápido e transportamos seu veículo com total segurança.</p>
 
 		<div class="urgente">⚠️ Atendimento imediato • Online agora</div>
-		<a class="btn" onclick="chamarZap()">Preciso de Guincho Agora</a>
+		<a class="btn" onclick="ligarAgora()">Preciso de Guincho Agora</a>
 
 		<div class="badges">
 		  <div class="badge">
@@ -418,7 +418,7 @@
 	  </section>
 	</main>
 
-	<a class="whatsapp" aria-label="Chamar no WhatsApp" onclick="chamarZap()">
+	<a class="whatsapp" aria-label="Chamar no WhatsApp" onclick="ligarAgora()">
 	  <img src="whatsapp.webp" alt="WhatsApp">
 	</a>
 
